# blackbolt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
PRDs/: BLACKBOLT PRD Part 1.md  BLACKBOLT PRD Part 2.md  BLACKBOLT PRD Part 3.md  BLACKBOLT PRD Part 4.md  BLACKBOLT PRD Part 5.md
TRDs/: 00-system-overview.md  01-ingestion-pipeline.md  02-panel-detection-pipeline.md  03-bubble-detection-pipeline.md  04-reading-order-pipeline.md  05-ocr-pipeline.md  06-character-detection-pipeline.md  07-character-consolidation-pipeline.md  08-speaker-attribution-pipeline.md  09-emotion-detection-pipeline.md  10-scene-detection-pipeline.md  11-narration-pipeline.md  12-voice-assignment-pipeline.md  13-music-selection-pipeline.md  14-dialogue-production-pipeline.md  15-ambient-audio-pipeline.md  16-audio-stitching-pipeline.md  17-progressive-generation-pipeline.md  18-publishing-pipeline.md  19-playback-sync-pipeline.md  20-regeneration-pipeline.md
backend/: .env.example  Dockerfile  celery_app.py  pyproject.toml
backend/app/: config.py  dependencies.py  exceptions.py  logging.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: page.py  project.py  user.py
backend/app/routers/: ingestion.py  projects.py  public.py
backend/app/schemas/: page.py  project.py
backend/app/services/: storage.py
backend/app/tasks/: ingestion.py
backend/tests/: conftest.py  test_health.py  test_ingestion.py  test_projects.py  test_public.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
infra/: docker-compose.yml
shared/: README.md  (+1 more)
(+21 files in other folders)
