[project]
name = "blackbolt-backend"
version = "0.1.0"
description = "BLACKBOLT - AI Comic Adaptation Studio Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "beanie>=1.26.0",
    "motor>=3.5.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "celery[redis]>=5.4.0",
    "boto3>=1.35.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "pymupdf>=1.24.0",
    "pillow>=10.4.0",
    "rarfile>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "isort>=5.13.0",
    "pre-commit>=3.8.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
